Updated foursquare keys

--- a/wp7-donor/Donor/Resources/AppResources.resx
+++ b/wp7-donor/Donor/Resources/AppResources.resx
@@ -724,7 +724,7 @@ By using this application, you consent to the collection and use of this informa
     <value>Оценить приложение</value>
   </data>
   <data name="ReadMore" xml:space="preserve">
-    <value>Читатать дальше</value>
+    <value>Читать дальше</value>
   </data>
   <data name="secondbloodDescription" xml:space="preserve">
     <value>Сдал кровь второй раз</value>
